--- a/backend/web/templates/app.html
+++ b/backend/web/templates/app.html
@@ -1,4 +1,21 @@
-function setup() {
+<html>
+<head>
+  <meta charset="UTF-8">
+  <!--<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.8/p5.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+  <!-- uncomment lines below to include extra p5 libraries -->
+  <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
+  <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
+  <!--<script language="javascript" type="text/javascript" src="sketch.js"></script>-->
+  <!-- this line removes any default padding and style. you might only need one of these values set. -->
+  <style> body {padding: 0; margin: 0;} </style>
+</head>
+<body>
+
+	<script type="text/javascript">
+
+		function setup() {
 	createCanvas(windowWidth, windowHeight);
 
 	//define checkbox size
@@ -42,7 +59,7 @@ function draw() {
 	fill(255);
 
 	//text formatting
-	textSize(150);
+	textSize(100);
 	textStyle(BOLD);
 	textAlign(LEFT,CENTER);
 
@@ -63,12 +80,19 @@ function draw() {
 
 	//render text, 80 er differencen mellem box størrelsen og tekst størrelsen
 	fill(0);
+	
 	text("DAIRY",225,box1Y+80); 
 	text("GLUTEN",225,box2Y+80); 
 	text("SOY",225,box3Y+80);
 	text("NUTS",225,box4Y+80);
 	text("EGG",225,box5Y+80);
-
+/*
+	text("VEGETARIAN",225,box1Y+80); 
+	text("VEGAN",225,box2Y+80); 
+	text("PESCATARIAN",225,box3Y+80);
+	text("POLLOTARIAN",225,box4Y+80);
+	text("HALAL",225,box5Y+80);
+	*/
 	//red
 	stroke(255,0,0);
 	//cross 1
@@ -160,3 +184,10 @@ function draw() {
   		httpPost(url, "json", data);
   	}
   }
+
+
+
+	</script>
+
+</body>
+</html>
